# Castella

./: .gitignore  CMakeLists.txt  COMBATE.dox  Castella - Documento de Design.odt  Castella.sh  Doxyfile  Makefile  Makefile-oito  README.dox  README.md  SConstruct  libluabindd.so.0.9.0  main.cpp  shellCoringa.sh
CBProj/: soundsystem.cbp  soundsystem.depend
arquivos lua/: Screen.h  main.cpp  simpleSDLfunctions.h  tutorial lua
include/: Actor.hpp  Actor_Battler.hpp  Animated_Sprite.hpp  Button.hpp  Callback.hpp  Checklist.cpp  Checklist.hpp  ContentTable.cpp  ContentTable.hpp  ContentTable_Checklist_Factory.hpp  Drawable.hpp  FileContainer.hpp  FileHandler.hpp  Game.hpp  GameStructure.hpp  ImageHandler.hpp  Input.hpp  Item.hpp  Item_Defensive.hpp  Item_Weapon.hpp  LuaTable.hpp  LuaWBind.hpp  MapEditor.hpp  MapTile.hpp  MapTile.hpp~  Map_Battle.hpp  Map_World.hpp  Player.hpp  Region.hpp  RegionGraph.hpp  Reign.hpp  Scene.hpp  SceneControl.hpp  SceneHeaders.hpp  Scene_Battle.hpp  Scene_MapEditor.hpp  Scene_Region.hpp  Scene_StartMenu.hpp  Scene_Structure.hpp  Scene_World.hpp  (+14 more)
libs/: libluabindd.so.0.9.0
script/: ContentTable_Checklist_Factory.lua  actor_funcs.lua  castle.lua  cores.lua  criaGrafo.lua  make_structure_defines.lua  pizza.lua  pizza2.lua  pizza3.lua  pizza4.lua  players.lua  region.lua  regionGraph.lua  script1.lua  structure_defines.lua
src/: Actor_Battler.cpp  Button.cpp  Callback.cpp  FileContainer.cpp  FileHandler.cpp  Game.cpp  GameStructure.cpp  ImageHandler.cpp  Input.cpp  Item.cpp  LuaTable.cpp  MapEditor.cpp  MapEditor.cppp  MapTile.cpp  (+26 more)
(+58 files in other folders)
